<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">追忆</string>
    <string name="login">登录</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_verify_word">请输入邮箱验证码</string>
    <string name="send_verify">(%1$d)获取验证码</string>
    <string name="verfy_wrong">验证码错误</string>
    <string name="pwd_wrong">密码错误</string>
    <string name="login_by_username">用户名登录</string>
    <string name="register">邮箱注册</string>
</resources>