<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">

        <ImageView
            android:id="@+id/ivLogoYep"
            android:layout_width="242dp"
            android:layout_height="207dp"
            android:layout_marginTop="70dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/logo_yep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="276dp"
                android:layout_height="40dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/shape_edittext_login"
                android:hint="@string/input_email"
                android:paddingStart="14dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

            <EditText
                android:id="@+id/etVerify"
                android:layout_width="276dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edittext_login"
                android:hint="@string/input_verify_word"
                android:paddingStart="14dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUserName" />

            <TextView
                android:id="@+id/tvSendVerify"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="17dp"
                android:gravity="center"
                android:text="@string/send_verify"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/etVerify"
                app:layout_constraintTop_toBottomOf="@+id/etUserName" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etVerify">

                <TextView
                    android:id="@+id/tvTips"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/verfy_wrong"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCheckMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginEnd="9dp"
                    android:text="@string/login_by_username"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvRegister"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginEnd="17dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/btLogin"
            style="@style/style_dialog_btn"
            android:layout_marginBottom="133dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
